feat: define api join campaign
